--- a/bootcamp-testimonials/index.html
+++ b/bootcamp-testimonials/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsie Bootcamp Testimonials Slider</title>
+    <title>Responsive Bootcamp Testimonials Slider</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
     <div class="slider full-height">
-      <div class="slide"></div>
+      <div class="slide">
+        <div class="slide-text">
+          <p class="slide-text-description">
+            “ I’ve been interested in coding for a while but never taken the
+            jump, until now. I couldn’t recommend this course enough. I’m now in
+            the job of my dreams and so excited about the future. ”
+          </p>
+          <p class="slide-text-name">
+            Tanya Sinclair <span class="muted-text">UX Engineer</span>
+          </p>
+        </div>
+        <div class="slide-image">
+          <img src="assets/images/image-tanya.jpg" />
+          <div class="slider-controls">
+            <span class="slider-control prev-button"></span>
+            <span class="slider-control next-button"></span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
