--- a/bootcamp-testimonials/index.html
+++ b/bootcamp-testimonials/index.html
@@ -12,7 +12,26 @@
   </head>
   <body>
     <div class="slider full-height">
-      <div class="slide">
+      <div class="slide slide-active">
+        <div class="slide-text">
+          <p class="slide-text-description">
+            “ I’ve been interested in coding for a while but never taken the
+            jump, until now. I couldn’t recommend this course enough. I’m now in
+            the job of my dreams and so excited about the future. ”
+          </p>
+          <p class="slide-text-name">
+            Tanya Sinclair <span class="muted-text">UX Engineer</span>
+          </p>
+        </div>
+        <div class="slide-image">
+          <img src="assets/images/image-tanya.jpg" />
+          <div class="slider-controls">
+            <span class="slider-control prev-button"></span>
+            <span class="slider-control next-button"></span>
+          </div>
+        </div>
+      </div>
+      <div class="slide active">
         <div class="slide-text">
           <p class="slide-text-description">
             “ I’ve been interested in coding for a while but never taken the
@@ -32,5 +51,6 @@
         </div>
       </div>
     </div>
+    <script src="assets/script.js"></script>
   </body>
 </html>
