build: complete basic fade transition

--- a/bootcamp-testimonials/index.html
+++ b/bootcamp-testimonials/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="slider full-height">
-      <div class="slide slide-active">
+      <div class="slide">
         <div class="slide-text">
           <p class="slide-text-description">
             “ I’ve been interested in coding for a while but never taken the
@@ -31,19 +31,21 @@
           </div>
         </div>
       </div>
-      <div class="slide active">
+      <div class="slide">
         <div class="slide-text">
           <p class="slide-text-description">
-            “ I’ve been interested in coding for a while but never taken the
-            jump, until now. I couldn’t recommend this course enough. I’m now in
-            the job of my dreams and so excited about the future. ”
+            “ If you want to lay the best foundation possible I’d recommend
+            taking this course. The depth the instructors go into is incredible.
+            I now feel so confident about starting up as a professional
+            developer. ”
           </p>
           <p class="slide-text-name">
-            Tanya Sinclair <span class="muted-text">UX Engineer</span>
+            John Tarkpor
+            <span class="muted-text">Junior Front-end Developer</span>
           </p>
         </div>
         <div class="slide-image">
-          <img src="assets/images/image-tanya.jpg" />
+          <img src="assets/images/image-john.jpg" />
           <div class="slider-controls">
             <span class="slider-control prev-button"></span>
             <span class="slider-control next-button"></span>
