--- a/social-media-dashboard/index.html
+++ b/social-media-dashboard/index.html
@@ -11,7 +11,20 @@
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
-    <main class="dashboard"></main>
+    <main class="dashboard">
+      <div class="container">
+        <div class="dashboard__titlebar row row--between">
+          <div class="title">
+            <h1 class="title__content">Social Media Dashboard</h1>
+            <p class="title__summary">Total Followers: 23,004</p>
+          </div>
+          <div class="toggle">
+            <h4 class="toggle__text">Dark Mode</h4>
+            <span class="toggle__button"></span>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="assets/script.js"></script>
   </body>
 </html>
