build: counter styling

--- a/social-media-dashboard/index.html
+++ b/social-media-dashboard/index.html
@@ -23,6 +23,32 @@
             <span class="toggle__button"></span>
           </div>
         </div>
+        <div class="summary-cards row">
+          <div class="card card--facebook">
+            <div class="card__username card__username--facebook">
+              <p>@kervin.tech</p>
+            </div>
+            <div class="card__stats">
+              <h2>1987</h2>
+              <p>Followers</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__username card__username--twitter">
+              <p>@kervin5</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__username card__username--instagram">
+              <p>@kervin.tech</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__username card__username--youtube">
+              <p>@kervin.tech</p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="assets/script.js"></script>
