build: add grid for detailed stats

--- a/social-media-dashboard/index.html
+++ b/social-media-dashboard/index.html
@@ -32,22 +32,65 @@
               <h2>1987</h2>
               <p>Followers</p>
             </div>
+            <div class="card__today card__today--up">
+              <p>12 Today</p>
+            </div>
           </div>
-          <div class="card">
-            <div class="card__username card__username--twitter">
+          <div class="card card--twitter">
+            <div class="card__username">
               <p>@kervin5</p>
             </div>
-          </div>
-          <div class="card">
-            <div class="card__username card__username--instagram">
-              <p>@kervin.tech</p>
+            <div class="card__stats">
+              <h2>1044</h2>
+              <p>Followers</p>
+            </div>
+            <div class="card__today card__today--up">
+              <p>99 Today</p>
             </div>
           </div>
-          <div class="card">
-            <div class="card__username card__username--youtube">
+          <div class="card card--instagram">
+            <div class="card__username">
               <p>@kervin.tech</p>
             </div>
+            <div class="card__stats">
+              <h2>11k</h2>
+              <p>Followers</p>
+            </div>
+            <div class="card__today card__today--up">
+              <p>1099 Today</p>
+            </div>
           </div>
+          <div class="card card--youtube">
+            <div class="card__username">
+              <p>@kervin.tech</p>
+            </div>
+            <div class="card__stats">
+              <h2>8239</h2>
+              <p>Followers</p>
+            </div>
+            <div class="card__today card__today--down">
+              <p>144 Today</p>
+            </div>
+          </div>
+        </div>
+        <div class="dashboard__titlebar row row--between">
+          <div class="title">
+            <h2 class="title__content title__content--level2">
+              Overview - Today
+            </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card">Hello</div>
+          <div class="card">Bye</div>
+          <div class="card">Hello</div>
+          <div class="card">Hello</div>
+        </div>
+        <div class="row">
+          <div class="card">Hello</div>
+          <div class="card">Bye</div>
+          <div class="card">Hello</div>
+          <div class="card">Hello</div>
         </div>
       </div>
     </main>
