--- a/social-media-dashboard/index.html
+++ b/social-media-dashboard/index.html
@@ -13,7 +13,9 @@
   <body>
     <main class="dashboard">
       <div class="container">
-        <div class="dashboard__titlebar row row--between">
+        <div
+          class="dashboard__titlebar dashboard__titlebar--withmargin row row--between"
+        >
           <div class="title">
             <h1 class="title__content">Social Media Dashboard</h1>
             <p class="title__summary">Total Followers: 23,004</p>
@@ -23,7 +25,7 @@
             <span class="toggle__button"></span>
           </div>
         </div>
-        <div class="summary-cards row">
+        <div class="summary-cards row md">
           <div class="card card--facebook">
             <div class="card__username card__username--facebook">
               <p>@kervin.tech</p>
@@ -66,7 +68,7 @@
             </div>
             <div class="card__stats">
               <h2>8239</h2>
-              <p>Followers</p>
+              <p>Subscribers</p>
             </div>
             <div class="card__today card__today--down">
               <p>144 Today</p>
@@ -80,17 +82,97 @@
             </h2>
           </div>
         </div>
-        <div class="row">
-          <div class="card">Hello</div>
-          <div class="card">Bye</div>
-          <div class="card">Hello</div>
-          <div class="card">Hello</div>
+        <div class="row md">
+          <div class="card card--small">
+            <div class="card__title card__title--facebook">
+              <p>Page Views</p>
+            </div>
+            <div class="card__footer row">
+              <h2>87</h2>
+              <div class="card__today card__today--up card__today--right">
+                <p>3%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--facebook">
+              <p>Likes</p>
+            </div>
+            <div class="card__footer row">
+              <h2>52</h2>
+              <div class="card__today card__today--down card__today--right">
+                <p>2%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--instagram">
+              <p>Likes</p>
+            </div>
+            <div class="card__footer row">
+              <h2>5462</h2>
+              <div class="card__today card__today--up card__today--right">
+                <p>2257%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--instagram">
+              <p>Profile Views</p>
+            </div>
+            <div class="card__footer row">
+              <h2>52k</h2>
+              <div class="card__today card__today--up card__today--right">
+                <p>1375%</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="row">
-          <div class="card">Hello</div>
-          <div class="card">Bye</div>
-          <div class="card">Hello</div>
-          <div class="card">Hello</div>
+        <div class="row md">
+          <div class="card card--small">
+            <div class="card__title card__title--twitter">
+              <p>Retweets</p>
+            </div>
+            <div class="card__footer row">
+              <h2>117</h2>
+              <div class="card__today card__today--up card__today--right">
+                <p>303%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--twitter">
+              <p>Likes</p>
+            </div>
+            <div class="card__footer row">
+              <h2>507</h2>
+              <div class="card__today card__today--up card__today--right">
+                <p>553%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--youtube">
+              <p>Likes</p>
+            </div>
+            <div class="card__footer row">
+              <h2>107</h2>
+              <div class="card__today card__today--down card__today--right">
+                <p>19%</p>
+              </div>
+            </div>
+          </div>
+          <div class="card card--small">
+            <div class="card__title card__title--youtube">
+              <p>Total Views</p>
+            </div>
+            <div class="card__footer row">
+              <h2>1407</h2>
+              <div class="card__today card__today--down card__today--right">
+                <p>12%</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
