--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <a href="bootcamp-testimonials">Testimonial</a>
+    <a href="social-media-dashboard">Social Media Dashboard</a>
   </body>
 </html>
